--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>SMS Motivace</title>
-</head>
-<body>
-  <h1>Fáze 1 - Registrace</h1>
-  <!-- Formulář zde -->
-</body>
-</html>
+<!-- HTML obsahy zde -->
