--- a/balicek.html
+++ b/balicek.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Výběr balíčku</title>
-</head>
-<body>
-  <h1>Fáze 2 - Balíček</h1>
-</body>
-</html>
+<!-- HTML obsahy zde -->
