--- a/cas.html
+++ b/cas.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Výběr času</title>
-</head>
-<body>
-  <h1>Fáze 3 - Čas</h1>
-</body>
-</html>
+<!-- HTML obsahy zde -->
