--- a/platba.html
+++ b/platba.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Platba</title>
-</head>
-<body>
-  <h1>Fáze 4 - Platba</h1>
-</body>
-</html>
+<!-- HTML obsahy zde -->
